refactor: format :recycle: